Frankbelford/uatv1ba/force-app/main/default/objects/Suppliers__c/Suppliers__c.object-meta.xml
<CustomObject>
    <label>Suppliers</label>
    <nameField>
        <displayFormat>SP{0000000000}</displayFormat>
        <label>Preferred Supplier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>