Frankbelford/uatv1ba/force-app/main/default/objects/Suppliers__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Preferred_Suppliers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>