Frankbelford/uatv1ba/force-app/main/default/objects/Suppliers__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>Time to Vend (Hrs)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>