Frankbelford/uatv1ba/force-app/main/default/objects/Suppliers__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>2nd Tier Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplied Accounts</relationshipLabel>
    <relationshipName>Preferred_Suppliers1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>